# gothic-chorus-plugin

./: .gitignore  CMakeLists.txt  README.md
src/: plugin-editor.cpp  plugin-editor.h  plugin-processor.cpp  plugin-processor.h
